# servant-demo

./: LICENSE  README.md  config.yml  pandoc.yaml  servant-demo.cabal  stack.yaml  toc.txt
doc/: index.html
docker/: Dockerfile  README.md  demo-server.sh  demo_ssl.conf
src/: Lib.lhs
src/Api/: Dal.lhs  Data.lhs
test/: DalTest.lhs  Spec.lhs
test/Prop/Api/: Dal.lhs
